--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,10 @@
         <module>exercice3</module>
         <module>exercice4</module>
     </modules>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
     <packaging>pom</packaging>
 
 </project>
