--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,12 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
     <packaging>pom</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+        </dependency>
+    </dependencies>
 
 </project>
